--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -3,12 +3,15 @@
 @import './base/reset';
 @import './base/breakpoints';
 @import './base/mixins';
+@import './base/helpers';
 @import './base/tags';
 
 @import './components/container';
 @import './components/block';
 @import './components/module';
 @import './components/header';
+@import './components/burger-menu';
+@import './components/nav';
 @import './components/logo';
 @import './components/title';
 @import './components/content';
