--- a/src/sass/components/module.scss
+++ b/src/sass/components/module.scss
@@ -1,3 +1,9 @@
 .module {
+    @keyframes module--blink {
+        0% { opacity: 0.3; }
+        30% { opacity: 0.7; }
+        100% { opacity: 1; }
+    }
+
     margin-bottom: 3.75rem;
 }
