--- a/src/sass/components/pictures.scss
+++ b/src/sass/components/pictures.scss
@@ -1,10 +1,66 @@
 .pictures {
     font-size: 0;
+    position: relative;
+
+    &__images {
+        width: 100%;
+        height: 0;
+        padding-top: 100%;
+        background: #000;
+        position: relative;
+    }
+
     &__image {
-        width: 25%;
-        display: inline-block; 
-        @include breakpoint('mobile') {
-            width: 50%;
+        width: 100%;
+        position: absolute;
+        top: 0;
+        opacity: 0;
+        z-index: 0;
+        transition-property: opacity;
+        transition-duration: 500ms;
+
+        &--show {
+            opacity: 1;
+            z-index: 1;
+        }
+    }
+
+    &__button {
+        $button-size: 40px;
+        $icon-size: 16px;
+
+        width: $button-size;
+        height: $button-size;
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        margin-top: ($button-size/2)*-1;
+        border-radius: 100px;
+        border: 0;
+        background-color: rgba(0, 0, 0, 0.3);
+        font-size: 0;
+        padding: 0;
+        z-index: 10;
+
+        > svg {
+            width: $icon-size;
+            height: $icon-size;
+            position: absolute;
+            left: ($button-size - $icon-size) / 2;
+            top: ($button-size - $icon-size) / 2;
+
+            path {
+                fill: #fff;
+            }
+        }
+        
+
+        &--prev {
+            left: 20px;
+        }
+
+        &--next {
+            right: 20px;
         }
     }
 }
