--- a/src/sass/components/content.scss
+++ b/src/sass/components/content.scss
@@ -11,6 +11,10 @@
         margin: 1em 0;
     }
 
+    a {
+        text-decoration: underline;
+    }
+
     &__asteriscos {
         font-size: 0.8em;
         color: #555;
